--- a/cloud_drive/package.json
+++ b/cloud_drive/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.0.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.10",
     "react": "^18.0.0",
@@ -15,7 +16,10 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "tinymce": "^6.0.1",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11",
+    "yup-password": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "terser-brunch": "^4.1.0"
   }
 }
