--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "homepage": "https://github.com/The-Rensselaer-Communion-of-Students/React#readme",
   "dependencies": {
     "firebase": "^9.6.10",
-    "firebase-tools": "^10.5.0",
+    "firebase-tools": "^1.2.0",
     "react-firebase-hooks": "^5.0.3",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "yup-password": "^0.2.2"
   }
 }
