--- a/cloud_drive/package.json
+++ b/cloud_drive/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "firebase": "^9.6.10",
+    "firebase": "^9.6.11",
+    "firebase-tools": "^10.7.1",
+    "firestore": "^1.1.6",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
